Fixed 421 - for header logo overlapping issue in ipad

--- a/missingkids/less/header.less
+++ b/missingkids/less/header.less
@@ -165,7 +165,7 @@
                 position: absolute;
                 left: 124px;
                 top: 16px;
-                z-index: 5;
+                z-index: 11;
             }
             @media(max-width: @screen-sm){
               left: 0 !important;
